--- a/c/cu/cul/culturewhiz.org.html
+++ b/c/cu/cul/culturewhiz.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the culturewhiz.org privacy policy that was archived on 2016-10-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161020023242id_/http%3A//culturewhiz.org/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the culturewhiz.org privacy policy that was archived on 2017-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170605231412id_/http%3A//www.culturewhiz.org/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" dir="ltr"><head>
   <link rel="profile" href="http://www.w3.org/1999/xhtml/vocab">
@@ -14,38 +14,38 @@
 <link rel="shortlink" href="http://culturewhiz.org/node/528">
   <title>Privacy Policy | Culture Whiz</title>
   <style>
-@import url("http://culturewhiz.org/modules/system/system.base.css?oe8dn6");
+@import url("http://culturewhiz.org/modules/system/system.base.css?oq1ry3");
 </style>
 <style>
-@import url("http://culturewhiz.org/sites/all/modules/contrib/date/date_popup/themes/datepicker.1.7.css?oe8dn6");
-@import url("http://culturewhiz.org/modules/field/theme/field.css?oe8dn6");
-@import url("http://culturewhiz.org/modules/node/node.css?oe8dn6");
-@import url("http://culturewhiz.org/sites/all/modules/contrib/views/css/views.css?oe8dn6");
+@import url("http://culturewhiz.org/sites/all/modules/contrib/date/date_popup/themes/datepicker.1.7.css?oq1ry3");
+@import url("http://culturewhiz.org/modules/field/theme/field.css?oq1ry3");
+@import url("http://culturewhiz.org/modules/node/node.css?oq1ry3");
+@import url("http://culturewhiz.org/sites/all/modules/contrib/views/css/views.css?oq1ry3");
 </style>
 <style>
-@import url("http://culturewhiz.org/sites/all/modules/contrib/ctools/css/ctools.css?oe8dn6");
-@import url("http://culturewhiz.org/sites/all/modules/contrib/rate/rate.css?oe8dn6");
-@import url("http://culturewhiz.org/modules/locale/locale.css?oe8dn6");
-@import url("http://culturewhiz.org/sites/all/libraries/fotorama/fotorama.css?oe8dn6");
-@import url("http://culturewhiz.org/sites/all/libraries/jssocials/jssocials.css?oe8dn6");
-@import url("http://culturewhiz.org/sites/all/libraries/jssocials/jssocials-theme-flat.css?oe8dn6");
-@import url("http://culturewhiz.org/sites/all/libraries/fontawesome/css/font-awesome.css?oe8dn6");
+@import url("http://culturewhiz.org/sites/all/modules/contrib/ctools/css/ctools.css?oq1ry3");
+@import url("http://culturewhiz.org/sites/all/modules/contrib/rate/rate.css?oq1ry3");
+@import url("http://culturewhiz.org/modules/locale/locale.css?oq1ry3");
+@import url("http://culturewhiz.org/sites/all/libraries/fotorama/fotorama.css?oq1ry3");
+@import url("http://culturewhiz.org/sites/all/libraries/jssocials/jssocials.css?oq1ry3");
+@import url("http://culturewhiz.org/sites/all/libraries/jssocials/jssocials-theme-flat.css?oq1ry3");
+@import url("http://culturewhiz.org/sites/all/libraries/fontawesome/css/font-awesome.css?oq1ry3");
 </style>
 <style>
-@import url("http://culturewhiz.org/sites/all/themes/custom/travelwhiz_bootstrap/css/style.css?oe8dn6");
+@import url("http://culturewhiz.org/sites/all/themes/custom/travelwhiz_bootstrap/css/style.css?oq1ry3");
 </style>
   <!-- HTML5 element support for IE6-8 -->
   <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <script type="text/javascript" async="" src="https://d31qbv1cthcecs.cloudfront.net/atrk.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="http://culturewhiz.org/sites/default/files/js/js_MpKfe1sTh5JIVGCZ17DsAuT1rqAC38MLLlkjqjQ1X_k.js"></script>
-<script src="http://culturewhiz.org/sites/default/files/js/js_saBykFnv4A1gZjL7rh9MGJgSXazvzQfOw_EUyEISk-w.js"></script>
+  <script type="text/javascript" async="" src="https://d31qbv1cthcecs.cloudfront.net/atrk.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="http://culturewhiz.org/sites/default/files/js/js_gPM6NXOQjN2XM2JWQGfy07nKmcdDFrL289YA7h80ySs.js"></script>
+<script src="http://culturewhiz.org/sites/default/files/js/js_611YDrcKvUCjbP40KiaklfM_IzG9AmFS0d7dsUpPd7M.js"></script>
 <script src="http://culturewhiz.org/sites/default/files/js/js_gPqjYq7fqdMzw8-29XWQIVoDSWTmZCGy9OqaHppNxuQ.js"></script>
 <script>(function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,"script","//www.google-analytics.com/analytics.js","ga");ga("create", "UA-71048506-1", {"cookieDomain":"auto"});ga("set", "anonymizeIp", true);ga("send", "pageview");</script>
-<script src="http://culturewhiz.org/sites/default/files/js/js_JrY6sh-LZYTOnj002nlH2pqwxZGGMHkGAO-LEoa-H3U.js"></script>
-<script src="http://culturewhiz.org/sites/default/files/js/js_rvpUcpK-JgCmO3vJCU60yKyTIVbSTO45byDTX9wWcNI.js"></script>
+<script src="http://culturewhiz.org/sites/default/files/js/js_idRCu6dbNt-8vHITTK-0THWpGZlQh8mv5JhuMU39rjY.js"></script>
+<script src="http://culturewhiz.org/sites/default/files/js/js_XO27dqWPyc42RwRjtHb9kdLlG6yWM3vOQcMF3flyreY.js"></script>
 <script src="http://culturewhiz.org/sites/default/files/js/js_oYVKp-cluFZQnjxYMtXDmhZY3bwT8PYHYk6oiRMAQDw.js"></script>
-<script>jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"travelwhiz_bootstrap","theme_token":"KjwNS1P0Lyh9X_2rEkP-u6z4ibDdwQYydiEGT8-mQgw","jquery_version":"1.10","js":{"modules\/statistics\/statistics.js":1,"sites\/all\/themes\/contrib\/bootstrap\/js\/bootstrap.js":1,"sites\/all\/modules\/contrib\/jquery_update\/replace\/jquery\/1.10\/jquery.min.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/all\/modules\/contrib\/jquery_update\/replace\/ui\/ui\/minified\/jquery.ui.effect.min.js":1,"sites\/all\/modules\/contrib\/jquery_update\/replace\/ui\/ui\/minified\/jquery.ui.effect-slide.min.js":1,"misc\/ajax.js":1,"sites\/all\/modules\/contrib\/jquery_update\/js\/jquery_update.js":1,"sites\/all\/modules\/contrib\/google_analytics\/googleanalytics.js":1,"0":1,"sites\/all\/themes\/contrib\/bootstrap\/js\/misc\/_progress.js":1,"sites\/all\/libraries\/fotorama\/fotorama.js":1,"sites\/all\/libraries\/jssocials\/jssocials.min.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/affix.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/alert.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/button.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/carousel.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/collapse.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/dropdown.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/modal.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/tooltip.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/popover.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/scrollspy.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/tab.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/transition.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/js\/fotorama.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/js\/menu.js":1,"sites\/all\/themes\/contrib\/bootstrap\/js\/misc\/ajax.js":1},"css":{"modules\/system\/system.base.css":1,"sites\/all\/modules\/contrib\/date\/date_popup\/themes\/datepicker.1.7.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"sites\/all\/modules\/contrib\/views\/css\/views.css":1,"sites\/all\/modules\/contrib\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/contrib\/rate\/rate.css":1,"modules\/locale\/locale.css":1,"sites\/all\/libraries\/fotorama\/fotorama.css":1,"sites\/all\/libraries\/jssocials\/jssocials.css":1,"sites\/all\/libraries\/jssocials\/jssocials-theme-flat.css":1,"sites\/all\/libraries\/fontawesome\/css\/font-awesome.css":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/css\/style.css":1}},"googleanalytics":{"trackOutbound":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|arc|arj|asf|asx|avi|bin|csv|doc(x|m)?|dot(x|m)?|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt(x|m)?|pot(x|m)?|pps(x|m)?|ppam|sld(x|m)?|thmx|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls(x|m|b)?|xlt(x|m)|xlam|xml|z|zip"},"statistics":{"data":{"nid":"528"},"url":"\/modules\/statistics\/statistics.php"},"bootstrap":{"anchorsFix":1,"anchorsSmoothScrolling":1,"formHasError":1,"popoverEnabled":1,"popoverOptions":{"animation":1,"html":0,"placement":"right","selector":"","trigger":"click","triggerAutoclose":1,"title":"","content":"","delay":0,"container":"body"},"tooltipEnabled":1,"tooltipOptions":{"animation":1,"html":0,"placement":"auto left","selector":"","trigger":"hover focus","delay":0,"container":"body"}}});</script>
+<script>jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"travelwhiz_bootstrap","theme_token":"YIX4QG-JZidz2__UL3u63V408H2Rk5F1mbHLkfVppFk","jquery_version":"1.10","js":{"modules\/statistics\/statistics.js":1,"sites\/all\/themes\/contrib\/bootstrap\/js\/bootstrap.js":1,"sites\/all\/modules\/contrib\/jquery_update\/replace\/jquery\/1.10\/jquery.min.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/all\/modules\/contrib\/jquery_update\/replace\/ui\/ui\/minified\/jquery.ui.effect.min.js":1,"sites\/all\/modules\/contrib\/jquery_update\/replace\/ui\/ui\/minified\/jquery.ui.effect-slide.min.js":1,"misc\/ajax.js":1,"sites\/all\/modules\/contrib\/jquery_update\/js\/jquery_update.js":1,"sites\/all\/modules\/contrib\/google_analytics\/googleanalytics.js":1,"0":1,"sites\/all\/themes\/contrib\/bootstrap\/js\/misc\/_progress.js":1,"sites\/all\/libraries\/fotorama\/fotorama.js":1,"sites\/all\/libraries\/jssocials\/jssocials.min.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/affix.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/alert.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/button.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/carousel.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/collapse.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/dropdown.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/modal.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/tooltip.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/popover.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/scrollspy.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/tab.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/bootstrap\/js\/transition.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/js\/fotorama.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/js\/menu.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/js\/jssocials.js":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/js\/magnific-popup.js":1,"sites\/all\/themes\/contrib\/bootstrap\/js\/misc\/ajax.js":1},"css":{"modules\/system\/system.base.css":1,"sites\/all\/modules\/contrib\/date\/date_popup\/themes\/datepicker.1.7.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"sites\/all\/modules\/contrib\/views\/css\/views.css":1,"sites\/all\/modules\/contrib\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/contrib\/rate\/rate.css":1,"modules\/locale\/locale.css":1,"sites\/all\/libraries\/fotorama\/fotorama.css":1,"sites\/all\/libraries\/jssocials\/jssocials.css":1,"sites\/all\/libraries\/jssocials\/jssocials-theme-flat.css":1,"sites\/all\/libraries\/fontawesome\/css\/font-awesome.css":1,"sites\/all\/themes\/custom\/travelwhiz_bootstrap\/css\/style.css":1}},"googleanalytics":{"trackOutbound":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|arc|arj|asf|asx|avi|bin|csv|doc(x|m)?|dot(x|m)?|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt(x|m)?|pot(x|m)?|pps(x|m)?|ppam|sld(x|m)?|thmx|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls(x|m|b)?|xlt(x|m)|xlam|xml|z|zip"},"statistics":{"data":{"nid":"528"},"url":"\/modules\/statistics\/statistics.php"},"bootstrap":{"anchorsFix":1,"anchorsSmoothScrolling":1,"formHasError":1,"popoverEnabled":1,"popoverOptions":{"animation":1,"html":0,"placement":"right","selector":"","trigger":"click","triggerAutoclose":1,"title":"","content":"","delay":0,"container":"body"},"tooltipEnabled":1,"tooltipOptions":{"animation":1,"html":0,"placement":"auto left","selector":"","trigger":"hover focus","delay":0,"container":"body"}}});</script>
 </head>
 <body role="document" class="html not-front not-logged-in one-sidebar sidebar-second page-node page-node- page-node-528 node-type-page i18n-en navbar-is-static-top">
   <div id="skip-link">
@@ -98,8 +98,10 @@
 <li class="leaf"></li><li role="separator" class="divider" title=""></li>
 <li class="last leaf"><a href="/places">Places</a></li>
 </ul></li>
+<li class="leaf"><a href="/experiences">Experiences<span class="label label-danger">new</span></a></li>
 <li class="expanded dropdown"><a href="#" title="" data-target="#" class="dropdown-toggle nolink" data-toggle="dropdown">Guides <i class="fa fa-angle-down"></i></a><ul class="dropdown-menu"><li class="first leaf"><a href="/articles">Articles</a></li>
 <li class="leaf"><a href="/trip-reports">Trip reports</a></li>
+<li class="leaf"><a href="/trip-planner" title="Trip planner">Planner</a></li>
 <li class="leaf"></li><li role="separator" class="divider" title=""></li>
 <li class="last leaf"><a href="/wanted" title="">Wanted</a></li>
 </ul></li>
@@ -168,11 +170,19 @@ Third party information: We use third-party advertising companies to serve ads w
     <div class="card">
 <div class="card-body">
 <p class="img-i-help center-block"></p>
-<h2 class="text-center">Help us</h2>
+<h2 class="text-center">Help support us</h2>
 <p>Do you enjoy the content on Culture Whiz? If so, please consider becoming a supporter.</p>
 <p><a href="http://culturewhiz.org/how-to-support-us">Click here to learn more</a></p>
 </div>
 </div>
+  </div>
+
+</section>
+<section id="block-block-11" class="block block-block clearfix">
+
+      
+  <div>
+    <p><a href="http://www.languagecircle.org/" target="_blank"><img src="http://culturewhiz.org/images/BannerSize.jpg/" width="265" height="263" alt="Language Circle" class="img-responsive" style="width:100%;"></a></p>
   </div>
 
 </section>
@@ -192,10 +202,12 @@ Third party information: We use third-party advertising companies to serve ads w
 <li class="last leaf"><a href="/press-media-information" title="">Press</a></li>
 </ul></li>
 <li class="expanded"><strong>Culture Whiz</strong><ul class="nav menu footer-menu"><li class="first leaf"><a href="/destinations/~top" title="">Destinations</a></li>
+<li class="leaf"><a href="/experiences" title="">Experiences</a></li>
 <li class="last leaf"><a href="/places" title="">Places</a></li>
 </ul></li>
 <li class="expanded"><strong>Guides</strong><ul class="nav menu footer-menu"><li class="first leaf"><a href="/articles" title="">Articles</a></li>
 <li class="leaf"><a href="/trip-reports" title="">Trip reports</a></li>
+<li class="leaf"><a href="/trip-planner">Trip planner</a></li>
 <li class="last leaf"><a href="/wanted" title="">Wanted</a></li>
 </ul></li>
 <li class="expanded"><strong>Media</strong><ul class="nav menu footer-menu"><li class="first leaf"><a href="/photos" title="">Photos</a></li>
@@ -238,7 +250,7 @@ _atrk_opts = { atrk_acct:"8bVQn1QolK10Y8", domain:"culturewhiz.org",dynamic: tru
   </div>
     </div>
     <div class="copyright text-center">
-      © <strong>CultureWhiz</strong> 2015. All Rights Reserved.    </div>
+      © <strong>CultureWhiz</strong> 2017. All Rights Reserved.    </div>
   </footer>
   <script src="http://culturewhiz.org/sites/default/files/js/js_VU7P4CTgUZdF2SyFko5LLAg9ZK0OSVjXVaAFnTLgVt0.js"></script>
 <script src="http://culturewhiz.org/sites/default/files/js/js_L50O_PWoAuMOxVjnzZCkNSSmI0kFwhZsO1_KS8WnGKw.js"></script>
