--- a/a/ar/arc/arcadesafari.com.html
+++ b/a/ar/arc/arcadesafari.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the arcadesafari.com privacy policy that was archived on 2016-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161221195438id_/http%3A//www.arcadesafari.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the arcadesafari.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606001413id_/http%3A//www.arcadesafari.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="utf-8">
@@ -10,12 +10,13 @@
 <meta property="og:image" content="http://web2.hostingcdn.com/abbars/img/logo.png">
 <meta http-equiv="Pragma" content="private">
 <meta http-equiv="Cache-Control" content="private, max-age=5400, pre-check=5400">
-<meta http-equiv="Expires" content="Thu, 22 Dec 16 11:54:38 -0800">
+<meta http-equiv="Expires" content="Tue, 06 Jun 17 17:14:13 -0700">
 <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="/favicon/favicon.ico">
 <meta name="description" content="Blast into action games, arcade games, strategy games and more!">
 <title>Privacy Policy - ArcadeSafari</title>
+<!--TY pixel --><!--end TY pixel --><!--Deactivate pixel --><!--end Deactivate pixel -->
 <!-- Facebook Pixel Code -->
-<script type="text/javascript" async="" defer="" src="//fagc.arcadesafari.com/piwik/piwik.js"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script>
+<script type="text/javascript" async="" defer="" src="//fagc.arcadesafari.com/piwik/piwik.js"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script>
 !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
 n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
 n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
@@ -55,6 +56,15 @@ src="https://www.facebook.com/tr?id=541654692710892&ev=PageView&noscript=1"
 <script src="http://web2.hostingcdn.com/gsg/js/respond.min.js"></script>
 <![endif]-->
 <script>var baseFunctions={Base64:{decode:function decode64(input){var keyStr="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=";var output="";var chr1,chr2,chr3="";var enc1,enc2,enc3,enc4="";var i=0;var base64test=/[^A-Za-z0-9\+\/\=]/g;input=input.replace(/[^A-Za-z0-9\+\/\=]/g,"");do{enc1=keyStr.indexOf(input.charAt(i++));enc2=keyStr.indexOf(input.charAt(i++));enc3=keyStr.indexOf(input.charAt(i++));enc4=keyStr.indexOf(input.charAt(i++));chr1=(enc1<<2)|(enc2>>4);chr2=((enc2&15)<<4)|(enc3>>2);chr3=((enc3&3)<<6)|enc4;output=output+String.fromCharCode(chr1);if(enc3!=64){output=output+String.fromCharCode(chr2)}if(enc4!=64){output=output+String.fromCharCode(chr3)}chr1=chr2=chr3="";enc1=enc2=enc3=enc4=""}while(i<input.length);return unescape(output)}}};</script>
+<!-- Google Analytics -->
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-66503302-8', 'auto');
+ga('send', 'pageview');
+</script>
 </head>
 <body>
 <div class="all">
@@ -184,13 +194,14 @@ src="https://www.facebook.com/tr?id=541654692710892&ev=PageView&noscript=1"
 <div id="footer-simple">
 <div class="row">
 <div class="col-xs-12 col-sm-8">
-© <a href="/">ArcadeSafari.com</a> 2016. All Rights Reserved.
+© <a href="/">ArcadeSafari.com</a> 2017. All Rights Reserved.
 </div>
 <div class="col-xs-12 col-sm-4 text-right"><a href="/about">About</a> <a href="/terms-of-use">Terms of use</a> <a href="/privacy-policy">Privacy policy</a> <a href="/copyright-policy">Copyright policy</a> <a href="/deactivate">Uninstall</a> <a href="/contact">Contact</a></div>
 </div>
 </div>
 </div>
 </div>
+<!--TY pixel --><!--end TY pixel --><!--Deactivate pixel --><!--end Deactivate pixel -->
 <script src="http://web2.hostingcdn.com/gsg/js/jquery-1.12.1.min.js" crossorigin="anonymous"></script>
 <script src="http://web2.hostingcdn.com/gsg/js/bootstrap.min.js"></script>
 <script src="http://web2.hostingcdn.com/gsg/js/main.js"></script>
