--- a/l/lo/loc/localguides.com.html
+++ b/l/lo/loc/localguides.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the localguides.com privacy policy that was archived on 2016-02-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160219223554id_/http%3A//localguides.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the localguides.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606004341id_/http%3A//www.localguides.com/privacy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>LocalGuides.com Privacy</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" class="l1-54634"><head><title>LocalGuides.com Privacy</title>
 <meta name="google-site-verification" content="o6Vly5M_AqxP0NpSfMu16dkRPMmoREtYJFSR9_VJIj4">
 <meta name="msvalidate.01" content="8523FBEEBA1E14BA151F75B809A1C836">
 <meta name="Author" content="Local Guides">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<script type="text/javascript">
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">
         window.google_analytics_uacct = "UA-12231566-1";
         window.google_analytics_domain_name = "localguides.com";
 </script><link rel="stylesheet" type="text/css" href="http://media.localguides.com/jq/smooth/jquery-ui-1.7.2.css">
@@ -26,10 +26,7 @@
         var tan_pid_300x250="58378";
 	var tan_dCity = "";
 	var tan_dState = "";
-</script>
-<!-- BEGIN TAN HEADER Tag -->
-<script src="http://www.traveladvertising.com/Live/TanHeader.aspx?PlacementId=10" type="text/javascript"></script>
-<!-- END TAN HEADER Tag --><link rel="shortcut icon" href="http://media.localguides.com/a/100/favicon.ico" type="image/x-icon"><script type="text/javascript" src="http://partner.googleadservices.com/gampad/google_service.js"></script>
+</script><link rel="shortcut icon" href="http://media.localguides.com/a/100/favicon.ico" type="image/x-icon"><script type="text/javascript" src="http://partner.googleadservices.com/gampad/google_service.js"></script>
    <script type="text/javascript"> 
   GS_googleAddAdSenseService("ca-pub-3377446831696613");
   GS_googleEnableAllServices();
@@ -37,11 +34,12 @@
 GA_googleAddSlot("ca-pub-3377446831696613", "localguidescom_160x600_right");     
 GA_googleAddSlot("ca-pub-3377446831696613", "localguidescom_300x250_top");   
 GA_googleAddSlot("ca-pub-3377446831696613", "localguidescom_728x90_top");   
-GA_googleAddSlot("ca-pub-3377446831696613", "localguidescom_300x250_middle");  
+GA_googleAddSlot("ca-pub-3377446831696613", "localguidescom_300x250_bg");  
 GA_googleAddAdSensePageAttr("google_hints", ""); 
 GA_googleAddAdSensePageAttr("google_page_url", location.href);
 </script>
- <script type="text/javascript">   GA_googleFetchAds(); </script></head>
+ <script type="text/javascript">   GA_googleFetchAds(); </script>
+</head>
 <body class="p78 pt9">
 <div id="bodyContainer">
 	<div id="header">
@@ -291,23 +289,37 @@ GA_googleAddAdSensePageAttr("google_page_url", location.href);
 	<div id="foot"><ul class="footlinks"><li class="first "><a rel="" href="/index.html">Home</a></li><li><a rel="" href="/aboutus.html">About Us</a></li><li><a rel="" href="/contactus.html">Contact Us</a></li><li><a rel="" href="/advertising.html">Advertise With Us</a></li><li><a rel="" href="/privacy.html">Privacy Policy</a></li><li class="last "><a rel="" href="/terms_of_use.html">Terms of Use</a></li></ul></div>
 	<div class="clearer"></div>
 </div>
+<script type="text/javascript" src="//media.localguides.com/mp/js/custga_v2.js"></script>
 <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://" : "http://");
-document.write(unescape("%3Cscript src='" + gaJsHost + "media.localguides.com/mp/js/custga_v1.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://media.localguides.com/mp/js/custga_v1.js" type="text/javascript"></script>
-<script type="text/javascript">
-try{
-var lg_pageTracker = _gat._getTracker("UA-12231566-1");
-lg_pageTracker._setDomainName("localguides.com");
-lg_pageTracker._setCampSourceKey('a1');
-lg_pageTracker._setCampContentKey('a2');
-lg_pageTracker._setCampTermKey('a3');
-lg_pageTracker._trackPageview();
-var lg_wrap = new lg_GAWrapper(lg_pageTracker);
-} catch(err) {}</script>
-<noscript><img src="http://media.localguides.com/noscript.gif" width="1" height="1"/></noscript>
+    function getParameterByName(name, url) {
+    if (!url) {
+        url = window.location.href;
+    }
+    name = name.replace(/[\[\]]/g, "\\$&");
+    var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+        results = regex.exec(url);
+    if (!results) return null;
+    if (!results[2]) return '';
+    return decodeURIComponent(results[2].replace(/\+/g, " "));
+}
+</script>
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject'] = r;i[r]=i[r]||function(){
+        (i[r].q = i[r].q || []).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-12231566-1', 'auto', { 'legacyCookieDomain': 'localguides.com' }); 
+    var cs = getParameterByName('a1'), cc = getParameterByName('a2'), ck = getParameterByName('a3');
+	    if(cs!=null && cs.length>0)
+if(cs==="2"){
+        ga('set', 'campaignSource', cs); 
+    if(cc!=null && cc.length>0)
+        ga('set', 'campaignContent', cc);  
+    if(ck!=null && ck.length>0)
+        ga('set', 'campaignKeyword', ck);
+}
+ga('send', 'pageview');
+var lg_wrap = new lg_GAWrapper(ga);
+</script>
 </body></html>
