--- a/g/ga/gam/gamesetwatch.com.html
+++ b/g/ga/gam/gamesetwatch.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gamesetwatch.com privacy policy that was archived on 2016-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160605145649id_/http%3A//legal.us.ubm.com/privacy-notice-highlights) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gamesetwatch.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606004440id_/http%3A//legal.us.ubm.com/privacy-notice-highlights) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml" itemscope="" itemtype="http://schema.org/Event"><head>
 <title>UBM - UBM LLC Privacy Policy Highlights</title>
@@ -11,7 +11,7 @@
 <!-- Stylesheets -->
 <link href="/css/main.css" rel="stylesheet" type="text/css" media="All">
 <!-- Javascripts -->
-<script type="text/javascript" src="/js/jquery.js" language="javascript"></script><script type="text/javascript" src="/js/global.js" language="javascript"></script>
+<script type="text/javascript" async="" src="//img.en25.com/i/elqCfg.min.js"></script><script type="text/javascript" src="/js/jquery.js" language="javascript"></script><script type="text/javascript" src="/js/global.js" language="javascript"></script>
 <style type="text/css">
 .titleContent {
 	cursor:pointer;
@@ -245,10 +245,10 @@
     </div>
     <div id="footer-container">
       <div id="credential">
-        <p>© UBM 2016</p>
+        <p>© UBM 2017</p>
       </div>
       <div id="footermenu">
-        <ul><li><a href="https://web.archive.org/web/20160405163255id_/http://legal.us.ubm.com/privacy-policy-highlights/?view=mobile">Mobile Site</a></li>
+        <ul><li><a href="https://web.archive.org/web/20170607050642id_/https://legal.us.ubm.com/privacy-policy-highlights/?view=mobile">Mobile Site</a></li>
           <li><a href="http://ubm.com/site-services/privacy.aspx?view=mobile">Mobile Site</a></li>
           <li><a href="http://ubm.com/about-ubm/contact-us.aspx">Contact UBM</a></li>
           <li><a href="http://ubm.com/site-services/disclaimer.aspx">Disclaimer</a></li>
@@ -265,14 +265,30 @@
   </div>
 
 
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-4596830-1");
-pageTracker._initData();
-pageTracker._trackPageview();
-</script>
+  <script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    var pageTracker = _gat._getTracker("UA-4596830-1");
+    pageTracker._initData();
+    pageTracker._trackPageview();
+  </script>
+  
+  <script type="text/javascript">
+    var _elqQ = _elqQ || [];
+    _elqQ.push(['elqSetSiteId', '2150']);
+    _elqQ.push(['elqTrackPageView']);
+    
+    (function () {
+        function async_load() {
+            var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
+            s.src = '//img.en25.com/i/elqCfg.min.js';
+            var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+        }
+        if (window.addEventListener) window.addEventListener('DOMContentLoaded', async_load, false);
+        else if (window.attachEvent) window.attachEvent('onload', async_load); 
+    })();
+  </script>
 
 </body></html>
