--- a/p/pr/pr8/pr8directory.com.html
+++ b/p/pr/pr8/pr8directory.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pr8directory.com privacy policy that was archived on 2016-11-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161118223452id_/http%3A//www.pr8directory.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pr8directory.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606004618id_/http%3A//www.pr8directory.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -119,20 +119,20 @@
               <div class="side-box-title">LATEST ARTICLES</div>
               <div class="side-box">
                 <ul>
-                  <li class="latest-artic"><a href="/article/data-disaster-3068">Data Disaster</a></li><li class="divider"> </li><li class="latest-artic"><a href="/article/make-a-statement-with-manyavar-ethnic-wear-3067">Make a statement with Manyavar ethnic wear</a></li><li class="divider"> </li><li class="latest-artic"><a href="/article/halloween-costume-ideas-for-young-teens-3066">Halloween Costume Ideas For Young Teens</a></li><li class="divider"> </li><li class="latest-artic"><a href="/article/what-to-expect-from-a-criminal-attorney-las-vegas-licensed-practitioner-3065">What to Expect From a Criminal Attorney Las Vegas Licensed Practitioner</a></li><li class="divider"> </li><li class="latest-artic"><a href="/article/automatic-pool-cleaners-3064">Automatic Pool Cleaners</a></li>                </ul>	
+                  <li class="latest-artic"><a href="/article/are-alcohol-miniatures-a-good-option-for-wedding-favors?-3084">Are alcohol miniatures a good option for wedding favors?</a></li><li class="divider"> </li><li class="latest-artic"><a href="/article/high-quality-leather-briefcases-of-your-choice--3154">High Quality Leather Briefcases of Your Choice </a></li><li class="divider"> </li><li class="latest-artic"><a href="/article/when-to-replace-your-roof---exceptional-exteriors-3153">When to Replace your Roof - Exceptional Exteriors</a></li><li class="divider"> </li><li class="latest-artic"><a href="/article/buy-your-next-new-car-from-team-kia-in-manchester-3152">Buy Your Next New Car from Team Kia in Manchester</a></li><li class="divider"> </li><li class="latest-artic"><a href="/article/the-ultimate-guide-to-buying-christmas-decorations-online-3151">The Ultimate Guide to Buying Christmas Decorations Online</a></li>                </ul>	
               </div>
               <div class="side-box-foot"></div>
               
               <div class="side-box-title">STATS</div>
               <div class="side-box">
                 <ul>
-                	                  <li>Active Links: 27647</li>
-                  <li>Pending Links 65344</li>
+                	                  <li>Active Links: 27727</li>
+                  <li>Pending Links 81951</li>
                   <li>Main Categories: 21</li>
                   <li>Sub Categories: 1464</li>
                   <li>Article Topics: 29</li>
-                  <li>Pending Articles: 1289</li>
-                  <li>Active Articles: 3062</li>
+                  <li>Pending Articles: 2047</li>
+                  <li>Active Articles: 3148</li>
                 </ul>	
               </div>
               <div class="side-box-foot"></div>
